# platformgame

./: CMakeLists.txt  ChatList.qml  MainWindow.qml  README.md  componentcreatorengine.cpp  componentcreatorengine.h  filemonitoringclass.cpp  filemonitoringclass.h  gameloop.cpp  gameloop.h  iddledownstate.cpp  iddledownstate.h  iddleleftstate.cpp  iddleleftstate.h  iddlerightstate.cpp  iddlerightstate.h  iddleupstate.cpp  iddleupstate.h  input.cpp  input.h  main.cpp  main.qml  movingdownstate.cpp  movingdownstate.h  movingleftstate.cpp  movingleftstate.h  movingrightstate.cpp  movingrightstate.h  movingupstate.cpp  movingupstate.h  sprite.cpp  sprite.h  state.h  testingvec.cpp  testingvec.h  utils.cpp  utils.h  walkable.h
